--- a/styles/styles.css
+++ b/styles/styles.css
@@ -222,6 +222,7 @@ img {
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--primari-white-color);
+  border-color: transparent;
   cursor: pointer;
   transform: scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -518,6 +519,44 @@ img {
 
 .join-social-link {
   background-color: rgba(255, 255, 255, 0.1);
+  fill: var(--primari-white-color);
+}
+
+.footer-subscription-title {
+  display: block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primari-white-color)
+}
+
+.footer-subscription-mail {
+  margin-right: 12px;
+  padding: 15px 16px;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background: #2F303A;
+  outline: none;
+}
+
+.footer-subscription-form::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-subscription-btn {
+  display: inline-flex;
+  align-items: center;
+  padding: 10px 28px;
+  gap: 10px;
+}
+
+.footer-subscription-btn-icon {
   fill: var(--primari-white-color);
 }
 
