--- a/styles/styles.css
+++ b/styles/styles.css
@@ -718,7 +718,7 @@ img {
   height: 30px;
   border-radius: 50%;
   padding: 0;
-  background-color: #fff;
+  background-color: var(--primari-white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
