--- a/styles/styles.css
+++ b/styles/styles.css
@@ -730,7 +730,7 @@ img {
   fill: var(--accent-text-color);
 }
 
-/* is-hidden */
+/*  */
 .modal-form {
   display: flex;
   flex-direction: column;
@@ -820,7 +820,7 @@ img {
   width: 16px;
   height: 15px;
   margin-right: 7px;
-  background-image: url(/img/chekbox-off.svg);
+  background-image: url(./img/chekbox-off.svg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
   cursor: pointer;
@@ -828,7 +828,7 @@ img {
 }
 
 .modal-form-checkbox:checked + .modal-form-checkbox-label::before {
-  background-image: url(/img/chekbox-on.svg);
+  background-image: url(./img/chekbox-on.svg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
