--- a/styles/styles.css
+++ b/styles/styles.css
@@ -758,7 +758,9 @@ img {
 }
 
 .icon-wrapper {
+  display: block;
   position: relative;
+  margin-bottom: 10px;
 }
 
 .modal-icon {
@@ -773,7 +775,6 @@ img {
   width: 100%;
   height: 40px;
   padding-left: 45px;
-  margin-bottom: 10px;
   outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
